working version = need to update recipes and make live, nest thing to do is fix meals selection on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
+.Modal {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  width: 80%;
+  margin: auto;
+}
+
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,.5);
+  z-index: 999;
+}
+
 
 .DayPicker-Months {
-    background-color: grey;
+    background-color: transparent;
 }
 .DayPickerInput{
 color: white;
